# teoria-tridimensional-morfema

./: .dockerignore  .gitignore  .vercelignore  .zenodo.json  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TECHNICAL.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  vercel.json
.github/workflows/: ci.yml
api/: main.py
data/roots/: arabic_roots.json  hebrew_roots.json
examples/: arabic_ktb.py
scripts/: load_graph.py
tests/: conftest.py  test_dimensions.py  test_graph.py  test_hebrew.py  test_indo_european.py  test_mandarin.py  test_morpheme.py  test_russian.py  test_sanskrit.py  test_space.py
ttm/: __init__.py
ttm/analyzers/: __init__.py  arabic.py  base.py  english.py  factory.py  hebrew.py  indo_european.py  mandarin.py  portuguese.py  russian.py  sanskrit.py
ttm/api/: __init__.py  main.py  models.py
ttm/core/: __init__.py  dimensions.py  morpheme.py  space.py
ttm/db/: __init__.py  graph.py
ttm/utils/: __init__.py  language.py  visualization.py
web/: .gitignore  Dockerfile  index.html  next.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json
web/src/: App.tsx  index.css
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/analyze/: route.ts
web/src/components/: AnalysisPanel.tsx  MorphemeCube.tsx  MorphemeVisualizer.tsx  SearchForm.tsx
web/src/lib/ttm/: analyzer.ts  arabic.ts  generic.ts  hebrew.ts  types.ts
web/tests/smoke/: smoke.js
